--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/snack_back"
     tools:context="com.khelfi.snackdemo.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Snack Demo"
+        android:id="@+id/tvTitle"
         android:layout_centerHorizontal="true"
-        android:textSize="30dp"
+        android:textSize="45dp"
         android:textColor="@color/btn_unpressed"
         android:layout_marginTop="140dp"
          />
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="35dp">
 
         <info.hoang8f.widget.FButton
             android:layout_width="0dp"
@@ -33,7 +34,7 @@
             android:text="Sign Up"
             android:textColor="@color/colorPrimaryDark"
             android:layout_weight="1"
-            app:fButtonColor="@color/btn_unpressed"
+            app:fButtonColor="@color/colorAccent"
             app:shadowEnabled="true"
             app:shadowHeight="5dp"
             app:cornerRadius="5dp"
@@ -47,7 +48,7 @@
             android:text="Sign In"
             android:textColor="@color/colorPrimaryDark"
             android:layout_weight="1"
-            app:fButtonColor="@color/btn_unpressed"
+            app:fButtonColor="@color/colorAccent"
             app:shadowEnabled="true"
             app:shadowHeight="5dp"
             app:cornerRadius="5dp"
