--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -28,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:background="@color/btn_unpressed"
+        app:borderWidth="0sp"
+        android:backgroundTint="@color/colorPrimary"
         app:srcCompat="@drawable/ic_shopping_cart_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
