Added FireBase Cloud Messaging (FCM) remote webserver to manage notifications

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/etPass"
             android:hint="Password"
+            android:text="99999"
             android:textSize="20dp"
             app:met_textColorHint="@android:color/white"
             app:met_baseColor="@android:color/white"
